fixed input error text color to be more readable in dark mode

--- a/src/components/Inputs/Input.scss
+++ b/src/components/Inputs/Input.scss
@@ -28,6 +28,7 @@
     top: 8px;
     left: 10px;
     background-color: $background_color_error;
+    color: $text_color_black;
     padding: 2px 5px;
   }
 }
